# llm-serve

./: .env.example  .gitignore  README.md  api_usage.md  pyproject.toml  requirements.txt  run-qwen35-27b.sh  run-server.sh
docs/: batch-progress.md  codeflow.md  qwen-vllm.md  version-control.md
src/llm_serve/: __init__.py  __main__.py  app.py  batch.py  config.py  errors.py  main.py  prompting.py  schemas.py  storage.py  tokenization.py  types.py
src/llm_serve/runtime/: base.py  gpu_selection.py  manager.py  mock.py  ollama_backend.py  vllm_backend.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_app.py  test_batch_progress.py  test_config.py  test_gpu_selection.py  test_ollama_app.py  test_ollama_backend.py  test_runtime_manager.py  test_vllm_backend.py
