[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-serve"
version = "0.1.0"
description = "Local vLLM-backed gateway exposing OpenAI and Ollama-compatible APIs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]
runtime = [
  "vllm>=0.5.0,<1.0",
]

[project.scripts]
llm-serve = "llm_serve.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
