[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-serve"
version = "0.1.0"
description = "Local gateway exposing OpenAI and Ollama-compatible APIs over vLLM or Ollama backends."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.110,<1.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "tqdm>=4.66,<5.0",
  "uvicorn>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
runtime = [
  "vllm>=0.19.0,<1.0",
]

[project.scripts]
llm-serve = "llm_serve.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
